# aai-capstone

./: .combineignore  .gitignore  README.md  Taskfile.yml  combine.py  presentation-1.aux  presentation-1.fdb_latexmk  presentation-1.fls  presentation-1.nav  presentation-1.tex  presentation-1.toc  presentation-2.aux  presentation-2.fdb_latexmk  presentation-2.fls  presentation-2.tex  presentation-2.vrb  presentation-3.tex  presentation-4.tex  presentation-5.tex  presentation-extra.fdb_latexmk  presentation-extra.fls  presentation-extra.pyg  presentation-extra.snm  presentation-extra.tex  presentation-extra.vrb  presentation.pptx  pyproject.toml
.archive/config/: template.yml
.archive/content/: 01_ml_pipeline_intro.yml  dev_life_hacks.yml
.archive/templates/: template.pptx
config/: template.yml
pipeline/: __init__.py  __main__.py
pipeline/stages/: __init__.py  base.py
presentation-1/: presentation-1.tex
presentation-2/: presentation-2.tex
presentation-2/code/: bias_detection.py  data_loading.py  data_validation.py  entity_based_split.py  privacy_protection.py  process_categorical.py  time_based_split.py
presentation-3/: presentation-3.tex
presentation-3/code/: automate_training.py  data_splitting.py  explainability.py  fairness_check.py  handle_imbalance.py  hyperparameter_optimization.py  model_versioning.py
presentation-4/code/: Dockerfile  ci_cd_workflow.yaml  (+5 more)
presentation-5/: presentation-5.tex
scripts/: analyze_template.py  check-status.sh  install-deps.sh  pptx2pdf.sh  slide_creator.py  update-task.sh  validate_content.py  watch-dev.sh
(+14 files in other folders)
